@@ -16,8 +16,11 @@
 [Changed] Reduced chance of zombies spawning under floor of buildings.
 
 [Added] VSS_vintorez
+[Added] SCAR_L_CQC
 [Added] SCAR_L_CQC_Holo
+[Added] SCAR_L_STD_Mk4CQT
 [Added] SCAR_L_STD_EGLM_RCO
+[Added] SCAR_H_LNG_Sniper
 [Added] Different Ghillie suits for bandits
 [Added] Female Players can now wear ghillies
 
@@ -27,4 +30,3 @@
 [Removed] Radar from UH1H Camo (UH1H_TK_DZ)
 [Removed] Radar from MH6J (MH6J_DZ)
 [Removed] GPS from RHIB (RHIB_DZ)
-[Removed] MK16 until hive problems can be fixed.
